nambahin fetch book - jquery function fetch book di main.js - edit index.html, example card

--- a/index.html
+++ b/index.html
@@ -68,27 +68,12 @@
                 <button onclick="logout()">Logout</button>
             </div>
         </nav>
-        <div class="todo-container">
-            <div class="todo-left">
+        <div class="book-container">
+            <div class="book-left">
                 <h2>Book List</h2>
-                <div id="todo-list" class="todo-list">
+                <div id="book-list" class="book-list">
                     <!-- findAll list card -->
-                    <div class="frame-book">
-                        <div class="cover-book">
-                            <img src="./assets/img/Screenshot from 2020-11-26 19-59-08.png" style="width: auto; height: 225px;" alt="">
-                        </div>
-                        <div class="details-book">
-                            <div class="title-book">
-                                <p>Title Book</p>
-                            </div>
-                            <div class="author-book">
-                                <p>author book</p>
-                            </div>
-                            <div class="summary-book">
-                                <p>summary book</p>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <!-- end findAll list card -->
                 </div>
             </div>
